--- a/04. Operator.ipynb
+++ b/04. Operator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9f497451",
+   "id": "1d2761bc",
    "metadata": {},
    "source": [
     "# Operators\n",
@@ -15,11 +15,11 @@
     "\n",
     "<b>\n",
     "    \n",
-    "1. Arithmatic Operators \n",
+    "1. Arithmetic Operators \n",
     "\n",
     "2. Assignment Operators\n",
     "\n",
-    "3. Comparison Opertors\n",
+    "3. Comparison Operators\n",
     "\n",
     "4. Logical Operators\n",
     "\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "963c4921",
+   "id": "589466da",
    "metadata": {},
    "source": [
     "## 1. Arithmatic Operators \n",
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08d1fb42",
+   "id": "eff3ff6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3638569b",
+   "id": "eacfe575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c31e2233",
+   "id": "60b62874",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bfd506f",
+   "id": "ee763f87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef268cd6",
+   "id": "f1bcd706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c19daf5d",
+   "id": "d2bc62ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7d54c8f",
+   "id": "8805a323",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8e9d074",
+   "id": "8f3c5b17",
    "metadata": {},
    "source": [
     "## 2. Assignment Operators\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3a89d12",
+   "id": "f83dfa2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "421c9aaa",
+   "id": "110e0f5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "490897a4",
+   "id": "d7fafcc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e1e829",
+   "id": "f6f20f97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e34f95ae",
+   "id": "fda634f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11159952",
+   "id": "f264bdf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,14 +214,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acdfc05f",
+   "id": "18b20750",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a37f19c6",
+   "id": "787824ea",
    "metadata": {},
    "source": [
     "## 3. Comparison Operators\n",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "159a9524",
+   "id": "350b4f66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46be6aa0",
+   "id": "ea23a526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "620f06e8",
+   "id": "9d276f15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "808d30ec",
+   "id": "aa2fe891",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,14 +287,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fe57255",
+   "id": "1501e491",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "31a4f018",
+   "id": "1938e1e2",
    "metadata": {},
    "source": [
     "## 4. Logical Operators\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1767463",
+   "id": "3058dd89",
    "metadata": {},
    "source": [
     "### AND \n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "832f380f",
+   "id": "d9040fd7",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ad819d8f",
+   "id": "75ddb7fd",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "036e2385",
+   "id": "d36c1a9b",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2c1316cd",
+   "id": "9aba8f55",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3a0e4172",
+   "id": "ccea2ed0",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e214b3f4",
+   "id": "f9832814",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "af0d6f88",
+   "id": "c58b573f",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "62c3c054",
+   "id": "d4a85b97",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6a94a243",
+   "id": "1d33e77c",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d70455b",
+   "id": "ed5b4d46",
    "metadata": {},
    "source": [
     "### OR\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c4f71eae",
+   "id": "80238b19",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "43d8e9c1",
+   "id": "222f23a9",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bd4cf29d",
+   "id": "283cf298",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "05c4ae9e",
+   "id": "d3ae516e",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e634f21e",
+   "id": "4fa28ff8",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "994d1be9",
+   "id": "d345daa1",
    "metadata": {},
    "source": [
     "### not\n",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0d9b0e1d",
+   "id": "18f7c4ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "34c9a648",
+   "id": "506806fa",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "db9ea141",
+   "id": "9f2384a8",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad3892d5",
+   "id": "05a2e41a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dac5e0f",
+   "id": "72ecb89f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f985e220",
+   "id": "e8a6f598",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -708,14 +708,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c68f90",
+   "id": "ab8bdb49",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0492401e",
+   "id": "450a51cd",
    "metadata": {},
    "source": [
     "## 5.  Membership Operator\n",
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "99220da5",
+   "id": "5e260dd6",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c2b408a0",
+   "id": "247cf49b",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5baa282d",
+   "id": "80a1b8bf",
    "metadata": {},
    "outputs": [
     {
@@ -795,14 +795,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66375849",
+   "id": "7cfd0678",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9f76d3ff",
+   "id": "c030a331",
    "metadata": {},
    "source": [
     "## 6. Identity Operators\n",
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "10bcebe4",
+   "id": "0505bd9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ec33f1ea",
+   "id": "2d76061b",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f88b284d",
+   "id": "3597f42d",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3436d9bc",
+   "id": "0f8a1a31",
    "metadata": {},
    "outputs": [
     {
@@ -892,14 +892,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04ad076d",
+   "id": "6d0f70a6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6d87a8bd",
+   "id": "62668342",
    "metadata": {},
    "source": [
     "## Operation Order (precedence)"
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "71ed2793",
+   "id": "78d75be7",
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbbcaebd",
+   "id": "838c3b67",
    "metadata": {},
    "source": [
     "1. Parentheses                                          ()\n",
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c170f0e",
+   "id": "5cfa78b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c3c416f",
+   "id": "1787a7cb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -963,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5fc8585",
+   "id": "97d2d2d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "255f98fe",
+   "id": "6339625e",
    "metadata": {},
    "outputs": [],
    "source": [
